<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/jinzishan"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/jinzishan"
        android:textSize="40sp"
        />

    <TextView
        android:id="@+id/daxushan"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/daxushan"
        android:textSize="40sp"
        />

    <TextView
        android:id="@+id/yingyangguan"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/yingyangguan"
        android:textSize="40sp"
        />

    <TextView
        android:id="@+id/oujiatitian"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/oujiatitian"
        android:textSize="40sp"
        />
</LinearLayout>
